--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 .msg {
     font-size: 3em;
     font-family: cursive;
+    color: white;
     width: fit-content;
     margin: auto;
     z-index: 10;
